--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/sportsstore .
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/sportsstore ./SportsStore
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/sportsstore
 
       - name: Deploy to Azure Web App
