--- a/SportsStore/Dockerfile
+++ b/SportsStore/Dockerfile
@@ -1,10 +1,21 @@
-FROM mcr.microsoft.com/dotnet/aspnet:6.0
+# Stage 1: Build the app
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+WORKDIR /app
 
-COPY /bin/Release/net6.0/publish/ SportsStore/
+# Copy everything into the container
+COPY . .
+
+# Restore and publish the app
+RUN dotnet restore
+RUN dotnet publish -c Release -o out
+
+# Stage 2: Run the app
+FROM mcr.microsoft.com/dotnet/aspnet:6.0
+WORKDIR /app
+COPY --from=build /app/out .
 
 ENV ASPNETCORE_ENVIRONMENT=Production
 ENV Logging__Console__FormatterName=Simple
 
 EXPOSE 5000
-WORKDIR /SportsStore
 ENTRYPOINT ["dotnet", "SportsStore.dll", "--urls=http://0.0.0.0:5000"]
