--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Build and push Docker image
         run: |
           cd SportsStore
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/sportsstore .
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/sportsstore
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/sportsstore:latest .
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/sportsstore:latest
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
@@ -31,4 +31,4 @@ jobs:
           app-name: sportsstorecamilo2025
           slot-name: production
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          images: ${{ secrets.DOCKERHUB_USERNAME }}/sportsstore
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/sportsstore:latest
